syntax = "proto3";
option java_multiple_files = true;

package com.coolfish.hotfire.protocol.battle;
option java_package = "com.coolfish.hotfire.protocol.battle";
option csharp_namespace = "message";

message RawMessage {
	int32 messageType = 1;
	bytes messageBody = 2;
}
message Vector3Msg{
	float x = 1;
	float y = 2;
	float z = 3;
}

message QuaternionMsg{
	float x = 1;
	float y = 2;
	float z = 3;
	float w = 4;
}

message Vector2Msg{
	float x = 1;
	float y = 2;
}